Dockerizer microservice